debug-ui: fix linebreak flickering

--- a/api/web_ui/css/graphs.css
+++ b/api/web_ui/css/graphs.css
@@ -59,4 +59,5 @@ canvas {
 .dataEntry {
     padding-right: 10px;
     width: 45px;
+    white-space: nowrap;
 }
